sandbox/output
StockProfit.cpp:49:5: error: use of undeclared identifier 'transactions'
    transactions[buy] = BUY;
    ^
StockProfit.cpp:50:5: error: use of undeclared identifier 'transactions'
    transactions[sell] = SELL;
    ^
StockProfit.cpp:51:5: error: use of undeclared identifier 'transactions'
    transactions.push_back(transaction);
    ^
3 errors generated.
make: *** [test] Error 1
